# fastNLTK

./: .gitignore  .pre-commit-config.yaml  BENCHMARKS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  CR.md  CRATE_RESEARCH.md  Cargo.toml  GAINS.md  LICENSE  MIGRATING.md  Makefile  PERFORMANCE_PLAN.md  PERF_PLAN.md  PLAN.md  README.md  REMAINS.md  REVIEW.md  SHIM.md  _check_lancaster.py  check.ps1  deny.toml  pyproject.toml  rustfmt.toml
.cargo/: audit.toml  config.toml
.github/workflows/: quality.yml  release.yml
benchmarks/: __init__.py  bench_suite.py  harness.py  phase_abc_bench.py  run.py
benchmarks/results/: bench_1fd06d9+debug.json  bench_1fd06d9-dirty+debug.json  bench_28038c3-dirty+debug.json  bench_351aea6-dirty+debug.json  bench_60145ef-dirty+debug.json  bench_657da53-dirty+debug.json  bench_69bbeb1+debug.json  bench_69bbeb1-dirty+debug.json  bench_8705f54-dirty+debug.json  bench_8705f54-dirty.json  bench_9132f18+debug.json  bench_93f3758-dirty+debug.json  bench_96e179d+debug.json  bench_9938a11-dirty+debug.json  bench_9ee898d-dirty+debug.json  bench_a0cf2d5-dirty+debug.json  bench_c2299f6-dirty+debug.json  bench_c56b834-dirty+debug.json  bench_c7ed9b7-dirty+debug.json  bench_f3e7592-dirty+debug.json  bench_f7324b4-dirty+debug.json
fastnltk/: __init__.py  _rust.pyi  ccg.py  chat.py  chunk.py  classify.py  cluster.py  collocations.py  data.py  downloader.py  inference.py  lm.py  metrics.py  parse.py  probability.py  sem.py  sentiment.py  stem.py  tag.py  tokenize.py  translate.py  tree.py  util.py
fastnltk/corpus/: __init__.py
fuzz/fuzz_targets/: ccg_parse.rs  drs_parse.rs
scripts/: add_type_annotations.py  bench_bottlenecks.py  bench_missing.py  update_benchmark_table.py
src/: chat.rs  chunk.rs  cluster.rs  collocations.rs  corpus.rs  data.rs  drt.rs  error.rs  lib.rs  lm.rs  parse.rs  prelude.rs  probability.rs  sem.rs  sentiment.rs  translate.rs  tree.rs
src/ccg/: chart.rs  combinator.rs  lexicon.rs  mod.rs
src/classify/: maxent.rs  mod.rs  naivebayes.rs  textcat.rs
src/inference/: discourse.rs  mod.rs  nonmonotonic.rs  resolution.rs  tableau.rs
src/lm/: kneser_ney.rs  mod.rs  stupid_backoff.rs  witten_bell.rs
src/metrics/: agreement.rs  association.rs  jaccard.rs  jaro.rs  mod.rs  scores.rs  segmentation.rs  spearman.rs
src/probability/: dist.rs  mod.rs
src/sem/: evaluate.rs  expression.rs  mod.rs  parse.rs
src/stem/: arlstem.rs  cistem.rs  isri.rs  lancaster.rs  mod.rs  porter.rs  regexp.rs  rslp.rs  snowball.rs  wordnet.rs
src/tag/: hmm.rs  mod.rs  perceptron.rs  sequential.rs  tnt.rs
src/tag/sequential/: affix.rs  bigram.rs  mod.rs  regexp.rs  tagger_utils.rs  taggers.rs  trigram.rs  unigram.rs
src/tokenize/: logos_tokenizer.rs  mod.rs  mwe.rs  punkt.rs  regexp.rs  sexpr.rs  simple.rs  texttiling.rs  toktok.rs  treebank.rs  tweet.rs
src/util/: mod.rs  regex_cache.rs  string.rs
tests/: conftest.py  test_advanced.py  test_classify.py  test_collocations.py  test_core.py  test_coverage.py  test_demo.py  test_dropin_comprehensive.py  test_edge_cases.py  test_integration.py  test_invariants.py  test_metrics.py  test_probability.py  test_sentiment.py  test_simple_tokenizers.py  test_smoke.py  test_stemmers.py  test_tag.py  test_translate.py  test_tree.py  test_treebank_tokenizers.py
