[package]
name = "fastnltk"
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/your/fastnltk"
repository = "https://github.com/your/fastnltk"
description = "Drop-in Rust-accelerated replacement for NLTK"
keywords = ["nlp", "nltk", "tokenization", "tagging", "stemming", "parsing", "text-processing"]
categories = ["text-processing", "science"]
rust-version = "1.80"

[lib]
name = "fastnltk"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core bindings
pyo3 = { version = "0.29", features = ["abi3-py38", "generate-import-lib"] }

# Tokenization
regex = "1"
unicode-segmentation = "1"

# Stemming (saves 5,900 LoC — all Snowball algorithms)
rust-stemmers = "1"

# POS tagging + LM + HMM + ngram (saves ~2,500 LoC)
rustling = { version = "0.8", default-features = false, features = ["parallel"] }

# Serialization for model loading
serde = { version = "1", features = ["derive"] }
bincode = "2"
serde_json = "1"

# Performance
hashbrown = "0.17"
rustc-hash = "2"
once_cell = "1"
parking_lot = "0.12"
rand = "0.10"
mimalloc = { version = "0.1", optional = true }
smol_str = "0.3"
bumpalo = "3"
logos = "0.16"
smallvec = "1"
phf = { version = "0.14", features = ["macros"] }
thiserror = "2"

# Optional parallel processing
rayon = { version = "1", optional = true }

# Language detection (for TextCat replacement)
whatlang = "0.18"
nltk-metrics = "0.4"

[features]
default = ["parallel", "extension-module", "mimalloc"]
extension-module = ["pyo3/extension-module"]
parallel = ["rayon", "rustling/parallel"]
mimalloc = ["dep:mimalloc"]

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
opt-level = 3
panic = "abort"

[profile.dev]
opt-level = 0

[lints.clippy]
# Catch correctness / performance issues
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Allow pedantic lints that don't fit our domain
module_name_repetitions = "allow"
too_many_lines = "allow"
cast_precision_loss = "allow"
must_use_candidate = "allow"
missing_fields_in_debug = "allow"
# PyO3 FFI inherently uses unwrap/expect patterns
unwrap_used = "allow"
expect_used = "allow"
# Every PyO3 method returns PyResult — errors are PyErr variants
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# These are informational, not action items
missing_const_for_fn = "allow"
needless_pass_by_value = "allow"
# PyO3 #[pymethods] require &self even for stateless methods
unused_self = "allow"
# PyO3 #[pymethods] must return PyResult for FFI compatibility
unnecessary_wraps = "allow"
# #[pyo3] pyfunctions need complex return types for FFI
type_complexity = "allow"
# Intentional numeric casts in performance paths
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
cast_lossless = "allow"
# PyO3 uses Option-based patterns that trigger this
option_if_let_else = "allow"
# Performance-critical code uses index loops intentionally
needless_range_loop = "allow"
# PyO3 Signature attributes use parameter names matching Python API
similar_names = "allow"
# Tokenizer tokenize() methods use &self per PyO3 requirement
# Hashbrown entry API triggers this
or_fun_call = "allow"
# PyO3 allocates Vec<Vec<...>> for chart parsing
ptr_arg = "allow"
# Test code — pedantic lint cleanup deferred
redundant_closure_for_method_calls = "allow"
collapsible_match = "allow"
let_and_return = "allow"
branches_sharing_code = "allow"
items_after_statements = "allow"

[lints.rust]
unused_must_use = "warn"
unsafe_code = "deny"

[dev-dependencies]
approx = "0.5"
tempfile = "3"
