[package]
name = "fastnltk"
version = "0.5.4"
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/wyattferguson/fastnltk"
repository = "https://github.com/wyattferguson/fastnltk"
description = "Drop-in Rust-accelerated replacement for NLTK"
keywords = ["nlp", "nltk", "tokenization", "tagging", "stemming", "parsing", "text-processing"]
categories = ["text-processing", "science"]
rust-version = "1.97"

[lib]
name = "fastnltk"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.29", features = ["abi3-py310", "generate-import-lib"] }
regex = "1"
unicode-segmentation = "1"
rust-stemmers = "1"
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
serde_json = "1"
hashbrown = "0.17"
rustc-hash = "2"
parking_lot = "0.12"
rand = "0.10"
smol_str = { version = "0.3", features = ["serde"] }
bumpalo = "3"
logos = "0.16"
smallvec = "1"
phf = { version = "0.14", features = ["macros"] }
thiserror = "2"
rayon = { version = "1", optional = true }
whatlang = "0.18"
nltk-metrics = "0.4"
memchr = "2.8.3"

# Excluded on Linux aarch64: manylinux GCC v7 doesn't support -Wdate-time
# that the cc crate injects by default into libmimalloc-sys.
[target.'cfg(not(all(target_arch = "aarch64", target_os = "linux")))'.dependencies]
mimalloc = "0.1"

[features]
default = ["parallel", "extension-module"]
extension-module = ["pyo3/extension-module"]
parallel = ["rayon"]

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
opt-level = 3
panic = "abort"

[profile.dev]
opt-level = 0

# Clippy settings: most pedantic/nursery lints are wanted as warnings.
# The allow-list covers patterns inherent to PyO3 FFI.
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# unwrap_used/expect_used allowed at specific call sites via #[allow()]
# only where the precondition is statically proven (e.g. known-good regex literals)
missing_panics_doc = "allow"
unused_self = "allow"
unnecessary_wraps = "allow"
type_complexity = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
cast_lossless = "allow"

[lints.rust]
unused_must_use = "warn"
unsafe_code = "deny"

[dev-dependencies]
approx = "0.5"
tempfile = "3"
