[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "fastnltk"
version = "0.4.1"
requires-python = ">=3.8"
description = "Drop-in Rust-accelerated replacement for NLTK. Same API, 5-50x faster."
authors = [
    { name = "Wyatt Ferguson" },
]
license = "Apache-2.0"
keywords = ["nlp", "nltk", "tokenization", "tagging", "stemming", "parsing", "text-processing", "rust"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Rust",
    "Topic :: Text Processing :: Linguistic",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "nltk>=3.6",
]
dynamic = ["readme"]

[project.urls]
Homepage = "https://github.com/wyattferguson/fastnltk"
Repository = "https://github.com/wyattferguson/fastnltk"
Changelog = "https://github.com/wyattferguson/fastnltk/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["maturin>=1.7", "pytest>=7", "pytest-benchmark", "ruff>=0.8", "mypy"]
test = ["pytest>=7", "pytest-benchmark", "hypothesis", "nltk>=3.6"]
lint = ["ruff>=0.8", "mypy", "pre-commit"]
all = ["fastnltk[dev,test,lint]"]

[tool.maturin]
module-name = "fastnltk._rust"
bindings = "pyo3"
features = ["pyo3/extension-module"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
extend-select = ["I", "Q", "UP", "RUF100"]
extend-ignore = ["E501", "E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = ["error"]
